// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IMGSQUAREUI SNAPSHOTS TESTS border medium ImgSquareUI should not be changed 1`] = `
<img
  alt="Оливье Накаш"
  class="image image_medium"
  data-nimg="1"
  decoding="async"
  height="300"
  loading="lazy"
  src="/_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=640&q=75"
  srcset="/_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=640&q=75 2x"
  style="color: transparent;"
  width="300"
/>
`;

exports[`IMGSQUAREUI SNAPSHOTS TESTS border small ImgSquareUI should not be changed 1`] = `
<img
  alt="Оливье Накаш"
  class="image"
  data-nimg="1"
  decoding="async"
  height="300"
  loading="lazy"
  src="/_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=640&q=75"
  srcset="/_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fst.kp.yandex.net%2Fimages%2Factor_iphone%2Fiphone360_382906.jpg&w=640&q=75 2x"
  style="color: transparent;"
  width="300"
/>
`;
